Fix navbar alignment.

--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ body {
 
 /* Nav */
 nav {
-  width: 1140px;
-  margin: 38px auto;
+  width: 1440px;
+  margin: 38px 0;
 }
 
 nav h1 {
